--- a/ui/package.json
+++ b/ui/package.json
@@ -31,7 +31,8 @@
     "react-icons": "^5.0.1",
     "react-loader-spinner": "^6.1.6",
     "react-router-dom": "^6.22.3",
-    "react-truncate-inside": "^1.0.3"
+    "react-truncate-inside": "^1.0.3",
+    "usehooks-ts": "^3.0.2"
   },
   "devDependencies": {
     "@originjs/vite-plugin-federation": "^1.3.5",
