--- a/ui/package.json
+++ b/ui/package.json
@@ -8,7 +8,8 @@
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "watch": "tsc -w"
+    "watch": "tsc -w",
+    "docker": "npm install --include=dev && vite --host"
   },
   "dependencies": {
     "@dashotv/components": "^0.1.12",
