--- a/ui/package.json
+++ b/ui/package.json
@@ -9,7 +9,7 @@
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "watch": "tsc -w",
-    "docker": "npm install --include=dev && vite --host"
+    "docker": "vite --host"
   },
   "dependencies": {
     "@dashotv/components": "^0.1.12",
